prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: prometheus
  namespace: infra
spec:
  rules:
  - host: prometheus-dash.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
